--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--Movies-->
+        <!--Movies View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="Flicks" customModuleProvider="target" sceneMemberID="viewController">
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="108" sectionHeaderHeight="1" sectionFooterHeight="28" id="0Lf-bx-02v">
-                                <rect key="frame" x="0.0" y="95" width="320" height="475"/>
+                                <rect key="frame" x="0.0" y="66" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="contentInset" minX="0.0" minY="-67" maxX="0.0" maxY="0.0"/>
@@ -56,7 +56,7 @@
                                 </prototypes>
                             </tableView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="gzh-JZ-C8S">
-                                <rect key="frame" x="0.0" y="95" width="320" height="478"/>
+                                <rect key="frame" x="0.0" y="66" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="2.5" id="g1Z-LW-KlE">
@@ -87,17 +87,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="pk6-4j-WGW">
-                                <rect key="frame" x="8" y="67" width="304" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="List"/>
-                                    <segment title="Grid"/>
-                                </segments>
-                                <connections>
-                                    <action selector="onLayoutSelectorChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="50T-tY-MX4"/>
-                                </connections>
-                            </segmentedControl>
                             <view alpha="0.80000000000000004" contentMode="scaleToFill" id="B2u-3W-izr">
                                 <rect key="frame" x="0.0" y="64" width="320" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -115,7 +104,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Movies" id="xEd-xs-reg"/>
+                    <navigationItem key="navigationItem" id="xEd-xs-reg">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="Qg5-Pm-AUo">
+                            <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="pk6-4j-WGW">
+                                <rect key="frame" x="16" y="8" width="81" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="" image="list_icon"/>
+                                    <segment title="" image="grid_icon"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onLayoutSelectorChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="50T-tY-MX4"/>
+                                </connections>
+                            </segmentedControl>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="errorNotificationView" destination="B2u-3W-izr" id="DX7-Dn-o88"/>
                         <outlet property="layoutSelector" destination="pk6-4j-WGW" id="pPs-d6-EtM"/>
@@ -201,7 +205,11 @@
             <point key="canvasLocation" x="173" y="378"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="grid_icon" width="16" height="16"/>
+        <image name="list_icon" width="16" height="16"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5gE-he-Qui"/>
+        <segue reference="yOC-xp-d7e"/>
     </inferredMetricsTieBreakers>
 </document>
